--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ span {
 .about-img img {
     width: 30vw;
     height: 75vh;
+    margin-right: 2rem;
+    border-radius: 2rem;
 }
 
 .heading {
@@ -242,6 +244,9 @@ span {
 
 .portfolio-box img {
     width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 2rem;
     transition: 0.5s ease;
 }
 
